apps/netbox/netbox-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-ts
  namespace: netbox
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: netbox
      port:
        number: 80
  tls:
    - hosts:
        - netbox           # → netbox.zebra-alewife.ts.net
